Fix pension website URL
- Updated cheongsolhyang pension link to correct repository URL
- Changed from cheongsolhyang-pension-website to cheongsolhyanggga

--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                             <span class="tech-tag">JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://park0838.github.io/cheongsolhyang-pension-website/" class="project-link" target="_blank">Live Demo</a>
+                            <a href="https://park0838.github.io/cheongsolhyanggga/" class="project-link" target="_blank">Live Demo</a>
                         </div>
                     </div>
                 </div>
