스킬 카드 개선: 아이콘 가독성 향상 및 기술 세분화
- 모든 텍스트 기반 아이콘을 이모지로 교체 (QA→🔍, LOL→🏆, 등)
- Tech Knowledge를 3개 전문 카드로 분할:
  * 🎧 Audio Equipment (음향기기) - 82%
  * 📡 Broadcast Gear (방송장비) - 85%
  * 🖱️ Gaming Gear (게이밍기어) - 88%
- 총 스킬 카드 수: 9개 → 11개로 확장
- 각 분야별 구체적 역량 명시로 전문성 강화

--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
             <!-- Skills Grid -->
             <div class="skills-grid">
                 <div class="skill-card">
-                    <div class="skill-icon-wrapper">QA</div>
+                    <div class="skill-icon-wrapper">🔍</div>
                     <div class="skill-name">Game Testing</div>
                     <div class="skill-description">버그 탐지, 밸런스 테스트</div>
                     <div class="skill-level">
@@ -1239,7 +1239,7 @@
                     </div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon-wrapper">LOL</div>
+                    <div class="skill-icon-wrapper">🏆</div>
                     <div class="skill-name">E-Sports</div>
                     <div class="skill-description">리그오브레전드, 코칭</div>
                     <div class="skill-level">
@@ -1247,7 +1247,7 @@
                     </div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon-wrapper">Web</div>
+                    <div class="skill-icon-wrapper">💻</div>
                     <div class="skill-name">Web Development</div>
                     <div class="skill-description">HTML, CSS, JavaScript</div>
                     <div class="skill-level">
@@ -1255,7 +1255,7 @@
                     </div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon-wrapper">AI</div>
+                    <div class="skill-icon-wrapper">🤖</div>
                     <div class="skill-name">AI Tools</div>
                     <div class="skill-description">ChatGPT, Claude</div>
                     <div class="skill-level">
@@ -1263,7 +1263,7 @@
                     </div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon-wrapper">분석</div>
+                    <div class="skill-icon-wrapper">📊</div>
                     <div class="skill-name">Game Analysis</div>
                     <div class="skill-description">메타 분석, 데이터 해석</div>
                     <div class="skill-level">
@@ -1271,7 +1271,7 @@
                     </div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon-wrapper">창업</div>
+                    <div class="skill-icon-wrapper">💡</div>
                     <div class="skill-name">Entrepreneurship</div>
                     <div class="skill-description">비즈니스 기획</div>
                     <div class="skill-level">
@@ -1295,11 +1295,27 @@
                     </div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon-wrapper">⚙️</div>
-                    <div class="skill-name">Tech Knowledge</div>
-                    <div class="skill-description">하드웨어/소프트웨어</div>
+                    <div class="skill-icon-wrapper">🎧</div>
+                    <div class="skill-name">Audio Equipment</div>
+                    <div class="skill-description">마이크, 믹서, 음향장비</div>
                     <div class="skill-level">
-                        <div class="skill-progress" style="width: 78%;"></div>
+                        <div class="skill-progress" style="width: 82%;"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon-wrapper">📡</div>
+                    <div class="skill-name">Broadcast Gear</div>
+                    <div class="skill-description">OBS, 스위처, 카메라</div>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 85%;"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon-wrapper">🖱️</div>
+                    <div class="skill-name">Gaming Gear</div>
+                    <div class="skill-description">조립PC, 주변기기</div>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 88%;"></div>
                     </div>
                 </div>
             </div>
